crates/oxc_react_compiler/tests/snapshots/new-mutability__error.invalid-new-date-constructor-prototype-set.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/error.invalid-new-date-constructor-prototype-set.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: Span { start: 162, end: 176 }, primary: true }], help: Some("Modifying a variable defined outside a component or hook is not allowed. Consider using an effect"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Error, code: OxcCode { scope: Some("react-compiler"), number: Some("Immutability") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/immutability") } }

No changes.
